# contracts

./: INCIDENT_AND_RESOURCE_MANAGEMENT.md
contracts/: Cargo.toml
contracts/access-control/src/: lib.rs  test.rs
contracts/allergy-management/: Cargo.toml
contracts/allergy-management/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/allergy-management/test_snapshots/test/: test_access_control.1.json  test_check_drug_allergy_interaction.1.json  test_double_initialize.1.json  test_environmental_allergy.1.json  test_food_allergy.1.json  test_get_active_allergies.1.json  test_get_all_allergies.1.json  test_initialize.1.json  test_invalid_allergen_type.1.json  test_multiple_severity_updates.1.json  test_patient_self_access.1.json  test_record_allergy.1.json  test_record_multiple_allergies.1.json  test_resolve_allergy.1.json  test_resolve_already_resolved.1.json  test_revoke_access.1.json  test_revoked_access_fails.1.json  test_unauthorized_access.1.json  test_update_allergy_severity.1.json  test_update_severity_invalid.1.json
contracts/financial-records/: Cargo.toml
contracts/financial-records/src/: lib.rs  test.rs
contracts/health-records/: Cargo.toml
contracts/health-records/src/: lib.rs  test.rs
contracts/lab-management/src/: lib.rs  test.rs
contracts/medical-claims/src/: lib.rs  test.rs  types.rs
contracts/multisig-governance/src/: lib.rs
contracts/patient-registry/: Cargo.toml
contracts/patient-registry/src/: lib.rs  test.rs
contracts/prescription-management/src/: lib.rs
contracts/shared/src/: actor_verification.rs  (+5 more)
contracts/src/: lib.rs
(+12 files in other folders)
