[package]
name = "allergy-management"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
ttl-config = { path = "../ttl-config" }
shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
provider-registry = { path = "../provider-registry" }

[features]
testutils = ["soroban-sdk/testutils"]
